@@ -44,6 +44,7 @@
 #include <libgnomeui/gnome-entry.h>
 #include <libgnomeui/gnome-file-entry.h>
 #include <libgnomeui/gnome-image-entry.h>
+#include <libgnomeui/gnome-image-selector.h>
 #include <libgnomeui/gnome-font-picker.h>
 #include <libgnomeui/gnome-gconf.h>
 #include <libgnomeui/gnome-geometry.h>
