@@ -1,5 +1,15 @@
 2001-05-09  Martin Baulig  <baulig@suse.de>
 
+	* gnome-selector-component.[ch]: New files.
+
+	* gnome-icon-selector-component.h (GnomeIconSelectorComponent): Derive
+	from GnomeSelectorComponent.
+
+	* gnome-image-selector.[ch]: New files; this is a GnomeSelectorClient
+	wrapper for the GnomeIconSelectorComponent.
+
+2001-05-09  Martin Baulig  <baulig@suse.de>
+
 	* gnome-icon-selector-component.[ch]: Use the new GnomeSelector API.
 
 	* gnome-icon-selector.[ch]: Renamed to gnome-icon-selector-component.[ch].
